# autotools-language-server

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py
docs/api/: autoconf-language-server.md  autotools-language-server.md
docs/resources/: configure.md  install.md
example/: README.md  test.mk
katid/: .envrc  .gitignore  README.md  shell.nix  xmake.lua
katid/assets/: Makefile
katid/src/: main.cc  run.cc  run.h
requirements/: misc.txt
scripts/: generate-autoconf.json.py
src/autoconf_language_server/: __init__.py  __main__.py  api.py  server.py  utils.py
src/autoconf_language_server/assets/json/: autoconf.json
src/autoconf_language_server/misc/: __init__.py  autoconf.py
src/autotools_language_server/: __init__.py  __main__.py  _tree_sitter.py  diagnostics.py  finders.py  parser.py  server.py  utils.py
src/autotools_language_server/api/: __init__.py  autoconf.py  make.py
src/autotools_language_server/assets/jq/: main.jq
src/autotools_language_server/assets/json/: autotools.json  config.json  make.json
src/autotools_language_server/assets/queries/: define.scm  include.scm
src/autotools_language_server/documents/: __init__.py  autoconf.py  make.py
src/autotools_language_server/misc/: __init__.py  autoconf.py  make.py
src/autotools_language_server/tree_sitter_lsp/: __init__.py  finders.py
src/make_language_server/: __init__.py  __main__.py  finders.py  server.py  utils.py
src/make_language_server/assets/queries/: include.scm  symbols.scm
src/make_language_server/misc/: make.py
tests/: Makefile  api_test.py  common.mk  diagnostics_test.py  server_test.py  test_documents.py  test_finders.py  test_server.py  test_utils.py
