# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "autotools-language-server"
version = "0.1.2"
description = "Language server for configure.ac"
readme = "README.md"
# type_a | type_b
requires-python = ">= 3.10"
license = "GPL-3.0-or-later"
keywords = ["autotools", "language server"]
dependencies = [
    "lsp-tree-sitter>=0.2.9",
    "tree-sitter-autoconf>=0.0.1",
]

[[project.authors]]
name = "Wu, Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.urls]
"Bug Report" = "https://github.com/Freed-Wu/autotools-language-server/issues"
Download = "https://github.com/Freed-Wu/autotools-language-server/releases"
Homepage = "https://autotools-language-server.readthedocs.io"
Source = "https://github.com/Freed-Wu/autotools-language-server"

[project.scripts]
autotools-language-server = "autotools_language_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.doq]
template_path = "templates"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true
